# python-practice

./: exampumy.py  main.py  pyproject.toml
